backend/src/main/java/com/example/payment/error/exception/MerchantNonDeletableException.java
package com.example.payment.error.exception;

public class MerchantNonDeletableException extends Exception {
}
